--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,7 +18,7 @@
   "description": "",
   "dependencies": {
     "@design-system-rte/core": "0.1.0",
-    "react": "^18.3.1",
+    "react": ">=18.0.0",
     "react-dom": "^18.3.1",
     "sass": "^1.85.1"
   },
