feat: add base integration between Angular & storybook structure

--- a/packages/angular/.gitignore
+++ b/packages/angular/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+*storybook.log
+
+# TODO: File added from compodoc.
+# Check if compodoc is still used & needed.
+documentation.json
