fix: correct storybook scss usage

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -95,6 +95,7 @@
               "-d",
               "."
             ],
+            "styles": ["../core/tokens/main.scss"],
             "port": 6006
           }
         },
