--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,18 +1,35 @@
+# Workflow name
+name: Build and Publish Storybook to GitHub Pages
+
 on:
+  # Event for the workflow to run on
   push:
     branches:
-      - "main" # change to the branch you wish to deploy from
+      - 'main' # Replace with the branch you want to deploy from
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# List of jobs
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Job steps
     steps:
-    - id: build-publish
-      uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
-      with:
-        path: ../packages/design-docs/storybook-static # change to your build folder
+      # Manual Checkout
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      # Set up Node
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22.14'
+      #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
+      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          install_command: npm ci
+          build_command: npm run build-design-docs
+          path: packages/design-docs/storybook-static
+          checkout: false # default: true
