--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@angular/cli": "^17.3.12"
+    "@angular/cli": "^17.3.12",
+    "@storybook/*": "^8.6.7"
   }
 }
