--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   ],
   "devDependencies": {
     "@angular/cli": "^17.3.12",
-    "storybook": "^8.6.7"
+    "@storybook/angular": "^8.6.7",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7"
   }
 }
