--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@angular/cli": "^17.3.12",
-    "@storybook/angular": "^8.6.7",
-    "@storybook/addon-essentials": "^8.6.7",
-    "@storybook/addon-interactions": "^8.6.7"
+    "@angular/cli": "^17.3.12"
   }
 }
