--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,6 @@ jobs:
       - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
           install_command: npm ci
-          build_command: npm run build-design-docs
+          build_command: npm --prefix packages/design-docs run build-storybook
           path: packages/design-docs/storybook-static
           checkout: false # default: true
