--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,18 +1,18 @@
 on:
     push:
-        branches:
-            - "main" # change to the branch you wish to deploy from
+      branches:
+        - "main" # change to the branch you wish to deploy from
   
-    permissions:
-        contents: read
-        pages: write
-        id-token: write
+permissions:
+    contents: read
+    pages: write
+    id-token: write
   
-    jobs:
-        deploy:
-            runs-on: ubuntu-latest
-            steps:
-                - id: build-publish
-                uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
-                with:
-                path: packages/deisgn-docs/storybook-static # change to your build folder
+jobs:
+    deploy:
+      runs-on: ubuntu-latest
+      steps:
+      - id: build-publish
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          path: build # change to your build folder
