fix: update build path in GitHub Actions deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,4 +15,4 @@ jobs:
       - id: build-publish
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
-          path: packages/deisgn-docs/build # change to your build folder
+          path: packages/deisgn-docs # change to your build folder
