--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,6 @@ jobs:
       - id: build-publish
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
-          build_command: yarn build-design-docs # default: npm run build-storybook
+          build_command: npm run build-design-docs
           path: packages/design-docs/storybook-static # default: dist/storybook
           checkout: false # default: true
