--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,35 +1,36 @@
-# Workflow name
-name: Build and Publish Storybook to GitHub Pages
+name: Deploy Storybook
 
 on:
-  # Event for the workflow to run on
   push:
-    branches:
-      - 'main' # Replace with the branch you want to deploy from
+    branches: [main]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# List of jobs
 jobs:
-  deploy:
+  deploy-storybook:
     runs-on: ubuntu-latest
-    # Job steps
     steps:
-      # Manual Checkout
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      # Set up Node
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
-      #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
-      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+          cache: 'npm'
+
+      - name: Install root dependencies
+        run: npm ci
+
+      - name: Install package-specific dependencies
+        working-directory: ./packages/design-docs  # Adjust this path to your specific Storybook package
+        run: npm ci
+
+      - name: Build Storybook
+        working-directory: ./packages/design-docs  # Same path as above
+        run: npm run build-storybook
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          install_command: npm ci
-          build_command: npm run build-design-docs
-          path: storybook-static
-          checkout: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./packages/design-docs/storybook-static  # Path to Storybook build output
+          publish_branch: gh-pages
