fix: improve GitHub Actions workflow for Storybook deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,35 +2,41 @@ name: Deploy Storybook
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
 
 jobs:
   deploy-storybook:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-
+      
       - name: Install root dependencies
         run: npm ci
-
-      - name: Install package-specific dependencies
-        working-directory: ./packages/design-docs  # Adjust this path to your specific Storybook package
+      
+      - name: Install package dependencies
+        working-directory: ./packages/design-docs
         run: npm ci
-
+      
+      - name: Install Storybook CLI
+        working-directory: ./packages/design-docs
+        run: npm install -D @storybook/cli
+      
       - name: Build Storybook
-        working-directory: ./packages/design-docs  # Same path as above
-        run: npm run build-storybook
-
+        working-directory: ./packages/design-docs
+        run: npx storybook build
+      
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./packages/design-docs/storybook-static  # Path to Storybook build output
+          publish_dir: ./packages/design-docs/storybook-static
           publish_branch: gh-pages
