--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,42 +1,35 @@
-name: Deploy Storybook
+# Workflow name
+name: Build and Publish Storybook to GitHub Pages
 
 on:
+  # Event for the workflow to run on
   push:
-    branches: 
-      - main
+    branches:
+      - 'main' # Replace with the branch you want to deploy from
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# List of jobs
 jobs:
-  deploy-storybook:
+  deploy:
     runs-on: ubuntu-latest
-    
+    # Job steps
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      # Manual Checkout
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      # Set up Node
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      
-      - name: Install root and workspace dependencies
-        run: |
-          npm ci
-          npm run bootstrap || true
-      
-      - name: List Installed Packages in design-docs
-        working-directory: ./packages/design-docs
-        run: |
-          echo "Installed packages:"
-          npm list | grep storybook
-          npm list | grep vite
-      
-      - name: Build Storybook
-        run: npm run build-design-docs
-      
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
+      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./packages/design-docs/storybook-static
-          publish_branch: gh-pages
+          install_command: yarn install # default: npm ci
+          build_command: yarn build-storybook # default: npm run build-storybook
+          path: ./packages/design-docs/storybook-static # default: dist/storybook
+          checkout: false # default: true
