--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -107,6 +107,7 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "angular:build",
+            "styles": ["../core/tokens/main.scss"],
             "compodoc": true,
             "compodocArgs": [
               "-e",
