--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -21,14 +21,19 @@
     "@storybook/experimental-addon-test": "^8.6.7",
     "@storybook/html": "^8.6.7",
     "@storybook/html-vite": "^8.6.7",
+    "@storybook/manager-api": "^8.6.11",
     "@storybook/react": "^8.6.7",
     "@storybook/react-vite": "^8.6.7",
     "@storybook/test": "^8.6.7",
+    "@storybook/theming": "^8.6.11",
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "playwright": "^1.51.1",
     "prop-types": "^15.8.1",
     "storybook": "^8.6.7",
     "vitest": "^3.0.9"
+  },
+  "dependencies": {
+    "@storybook/addon-themes": "^8.6.11"
   }
 }
