--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "base-storybook": "npm --prefix packages/design-docs run base-storybook",
     "design-docs": "npm --prefix packages/design-docs run storybook",
     "build-base-storybook": "npm --prefix packages/design-docs run build-base-storybook",
-    "build-design-docs": "npm --prefix packages/design-docs run build-storybook"
+    "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
+    "changeset": "changeset",
+    "changeset:add": "changeset add"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.28.1",
     "@angular/cli": "^17.3.12"
   }
 }
