--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  quality-react:
+  global-install: 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -17,9 +17,48 @@ jobs:
         with:
           node-version: 20
 
+      - name: Cache node_modules and Vite cache
+        id: cache-packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          restore-keys: |
+            deps-node20-PR-
+
       - name: Install dependencies
-        working-directory: packages/react 
+        if: steps.cache-packages.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline
+
+  quality-react:
+    runs-on: ubuntu-latest
+    needs: global-install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Restore cache node_modules and Vite cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          restore-keys: |
+            deps-node20-PR-
 
       - name: Run tests
         working-directory: packages/react
@@ -27,6 +66,7 @@ jobs:
 
   quality-angular:
     runs-on: ubuntu-latest
+    needs: global-install
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,9 +76,18 @@ jobs:
         with:
           node-version: 20
       
-      - name: Install dependencies
-        working-directory: packages/angular 
-        run: npm ci --prefer-offline
+      - name: Restore cache node_modules and Vite cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          restore-keys: |
+            deps-node20-PR-
 
       - name: Run tests
         working-directory: packages/angular
