--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -88,7 +88,6 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "angular:build",
-            "styles": ["../core/tokens/main.scss"],
             "compodoc": true,
             "compodocArgs": [
               "-e",
@@ -96,6 +95,7 @@
               "-d",
               "."
             ],
+            "styles": ["@design-system-rte/core/tokens/main.scss"],
             "port": 6006
           }
         },
