feat: set theming strategy

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -98,7 +98,7 @@
               "-d",
               "."
             ],
-            "styles": ["@design-system-rte/core/tokens/main.scss"],
+            "styles": ["@design-system-rte/core/tokens/main.scss", ".storybook/preview.scss"],
             "port": 6006
           }
         },
