--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "test": "ng test",
+    "build": "echo \"No build for Angular package\" && exit 0",
     "storybook": "ng run angular:storybook --port 7007",
     "build-storybook": "ng run angular:build-storybook --output-dir ../design-docs/storybook-static/angular"
   },
