feat: add environment variables system

--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -34,6 +34,7 @@
     "vitest": "^3.0.9"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.39.1",
     "@storybook/addon-themes": "^8.6.11"
   }
 }
