--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@changesets/cli": "^2.28.1",
-    "@angular/cli": "^17.3.12"
+    "@angular/cli": "^17.3.12",
+    "@changesets/cli": "^2.28.1"
   }
 }
