--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,6 @@
-name: Build and Publish Storybook to GitHub Pages
+name: Publish Storybook Composition to GitHub Pages
 
 on:
-  # Event for the workflow to run on
   push:
     branches:
       - 'main' # Replace with the branch you want to deploy from
@@ -11,24 +10,61 @@ permissions:
   pages: write
   id-token: write
 
-# List of jobs
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # Job steps
+
     steps:
-      # Manual Checkout
-      - uses: actions/checkout@v4
+      # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      # Set up Node
-      - uses: actions/setup-node@v4
+
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
-      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+          node-version: 20
+
+      # Cache node_modules and Vite cache
+      - name: Cache node_modules and Vite cache
+        id: cache-packages
+        uses: actions/cache@v4
         with:
-          install_command: npm ci
-          build_command: npm run
-          path: ./packages/design-docs/storybook-static # default: dist/storybook
-          checkout: false # default: true
+          path: |
+            ./node_modules
+            ./packages/react/node_modules
+            ./packages/react/.vite
+            ./packages/angular/node_modules
+            ./packages/angular/.vite
+          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          restore-keys: |
+            deps-node20-PR-
+
+      # Install dependencies
+      - name: Install dependencies
+        if: steps.cache-packages.outputs.cache-hit != 'true'
+        run: npm ci --prefer-offline
+
+      # Build Design Docs Storybook (Container Storybook)
+      - name: Build Design Docs Storybook
+        run: npm run build-design-docs
+
+      # Build Base Storybook (Content Storybook)
+      - name: Build Base Storybook
+        run: npm run build-base-storybook
+
+      # Deploy Storybook build to GitHub Pages
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './packages/design-docs/storybook-static'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
