fix: correct angular base styles for design-docs in production build

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -107,7 +107,7 @@
           "options": {
             "configDir": ".storybook",
             "browserTarget": "angular:build",
-            "styles": ["../core/tokens/main.scss"],
+            "styles": ["@design-system-rte/core/tokens/main.scss", ".storybook/preview.scss"],
             "compodoc": true,
             "compodocArgs": [
               "-e",
