--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
+    "@storybook/addon-a11y": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.7",
     "@storybook/addon-interactions": "^8.6.7",
     "@storybook/addon-onboarding": "^8.6.7",
