ci: debug npm ci on deploy. 3rd try

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Publish Storybook Composition to GitHub Pages
 on:
   push:
     branches:
-      - 'main'
+      - 'fix/test-ci'
 
 permissions:
   contents: read
