--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: Main CI
 on:
   push:
     branches:
-      - main
+      - fix/test-ci
 
 jobs:
 
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline
+        run: npm ci --prefer-offline --verbose
 
   quality-react:
     runs-on: ubuntu-latest
