--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-base-storybook": "npm --prefix packages/design-docs run build-base-storybook",
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "changeset": "changeset",
-    "changeset:add": "changeset add"
+    "changeset:add": "changeset add",
+    "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test"
   },
   "keywords": [],
   "author": "",
