--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "test": "ng test",
     "build": "echo \"No build for Angular package\" && exit 0",
     "storybook": "ng run angular:storybook --port 7007",
-    "build-storybook": "ng run angular:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook"
+    "build-storybook": "ng run angular:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
+    "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
+    "test": "test-storybook --url http://localhost:7007"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "@storybook/angular": "^8.6.6",
     "@storybook/blocks": "^8.6.6",
     "@storybook/test": "^8.6.6",
+    "@storybook/test-runner": "^0.22.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
