--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "@design-system-rte/core": "0.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "clsx": "^2.1.1",
     "react": ">=18.0.0",
     "react-dom": "^18.3.1",
