--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@design-system-rte/core": "0.1.0",
+    "@design-system-rte/core": "^0.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "clsx": "^2.1.1",
     "react": ">=18.0.0",
