--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@design-system-rte/core",
   "version": "0.1.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "style": "dist/styles/main.css",
-  "sass": "tokens/main.scss",
   "files": [
     "dist",
-    "tokens"
+    "assets"
   ],
   "scripts": {
-    "build": "vite build && sass tokens/main.scss:dist/styles/main.css",
+    "build": "vite build",
     "build:types": "tsc --emitDeclarationOnly",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -30,24 +30,33 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "types": "./dist/main.d.ts",
+      "import": "./dist/main.js"
     },
+    "./assets/*": "./dist/assets/*",
     "./components/*": {
       "types": "./dist/components/*.d.ts",
-      "import": "./dist/components/*.js"
+      "import": "./dist/components/*.js",
+      "style": "./dist/components/*.scss"
     },
     "./constants/*": {
       "types": "./dist/constants/*.d.ts",
       "import": "./dist/constants/*.js"
     },
-    "./tokens/*": "./tokens/*",
-    "./style.css": "./dist/styles/main.css",
-    "./scss": "./tokens/main.scss"
+    "./tokens/*": {
+      "import": "./dist/tokens/*.scss",
+      "style": "./dist/tokens/*.scss"
+    },
+    "./style.css": "./dist/styles/main.css"
   },
+  "sideEffects": [
+    "./dist/styles/main.css"
+  ],
   "devDependencies": {
     "glob": "^11.0.2",
+    "sass-embedded": "^1.87.0",
     "vite": "^6.3.2",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-lib-inject-css": "^2.2.2"
   }
 }
