--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "@design-system-rte/core": "^0.1.0",
+    "@design-system-rte/react": "file:",
     "@testing-library/jest-dom": "^6.6.3",
     "clsx": "^2.1.1",
     "react": ">=18.0.0",
@@ -38,6 +39,7 @@
     "@storybook/addon-interactions": "^8.6.6",
     "@storybook/addon-onboarding": "^8.6.6",
     "@storybook/blocks": "^8.6.6",
+    "@storybook/builder-vite": "^8.6.12",
     "@storybook/react": "^8.6.6",
     "@storybook/react-vite": "^8.6.6",
     "@storybook/test": "^8.6.6",
