[WIP] fix: add stylePreprocessorOptions to test config of angular.json to unlock CI

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -83,7 +83,10 @@
               "src/assets"
             ],
             "styles": [],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": ["../"]
+            }
           }
         },
         "storybook": {
