--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -83,10 +83,7 @@
               "src/assets"
             ],
             "styles": [],
-            "scripts": [],
-            "stylePreprocessorOptions": {
-              "includePaths": ["../"]
-            }
+            "scripts": []
           }
         },
         "storybook": {
