[WIP]: include wepackfinal to correct angular build ci

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -99,7 +99,13 @@
               "."
             ],
             "styles": ["@design-system-rte/core/tokens/main.scss", ".storybook/preview.scss"],
-            "port": 6006
+            "port": 6006,
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules",
+                "../core/lib"
+              ]
+            }
           }
         },
         "build-storybook": {
