--- a/packages/angular/.storybook/tsconfig.json
+++ b/packages/angular/.storybook/tsconfig.json
@@ -6,6 +6,10 @@
     "resolveJsonModule": true
   },
   "exclude": ["../src/test.ts", "../src/**/*.spec.ts"],
-  "include": ["../src/**/*.stories.*", "./preview.ts"],
+  "include": [
+    "../src/**/*.stories.*", 
+    "./preview.ts",
+    "../../core/lib/**/*.ts"
+  ],
   "files": ["./typings.d.ts"]
 }
