--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -6,7 +6,7 @@
     "build": "echo \"No build for Angular package\" && exit 0",
     "storybook": "ng run angular:storybook --port 7007",
     "build-storybook": "ng run angular:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
-    "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
+    "test:ci": "CI=true npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
     "test": "test-storybook --url http://localhost:7007"
   },
   "private": true,
