chore: deactivate CI angular to test integrations

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -64,7 +64,7 @@ jobs:
         working-directory: packages/react
         run: npm run test:ci
 
-  quality-angular:
+  # quality-angular:
     runs-on: ubuntu-latest
     needs: global-install
     steps:
