chore: deactivate CI angular to test integrations

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -65,31 +65,31 @@ jobs:
         run: npm run test:ci
 
   # quality-angular:
-    runs-on: ubuntu-latest
-    needs: global-install
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   runs-on: ubuntu-latest
+  #   needs: global-install
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 20
       
-      - name: Restore cache node_modules and Vite cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./node_modules
-            ./packages/react/node_modules
-            ./packages/react/.vite
-            ./packages/angular/node_modules
-            ./packages/angular/.vite
-          key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
-          restore-keys: |
-            deps-node20-PR-
+  #     - name: Restore cache node_modules and Vite cache
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ./node_modules
+  #           ./packages/react/node_modules
+  #           ./packages/react/.vite
+  #           ./packages/angular/node_modules
+  #           ./packages/angular/.vite
+  #         key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+  #         restore-keys: |
+  #           deps-node20-PR-
 
-      - name: Run tests
-        working-directory: packages/angular
-        run: npm run test:ci
+  #     - name: Run tests
+  #       working-directory: packages/angular
+  #       run: npm run test:ci
 
