--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -26,7 +26,7 @@
             "styles": [],
             "scripts": [],
             "stylePreprocessorOptions": {
-              "includePaths": ["../", "../core/lib"]
+              "includePaths": ["../"]
             }
           },
           "configurations": {
